# travel-agent

./: .env.example  .gitignore  Dockerfile  README.md  RETROSPECTIVE.md  docker-compose.yml  pyproject.toml  railway.toml
src/: graph.py  main.py  state.py
src/agents/: base.py  constants.py  cost.py  feedback.py  librarian.py  onboarding.py  orchestrator.py  planner.py  prioritizer.py  research.py  scheduler.py
src/config/: settings.py
src/db/: migrations.py  models.py  persistence.py  user_profile.py
src/telegram/: bot.py  formatters.py  handlers.py  nudge.py
src/tools/: currency.py  drift_detector.py  library_sync.py  markdown_sync.py  transit.py  trip_memory.py  trip_synthesis.py  weather.py  web_search.py
tests/: conftest.py  test_destination_agnostic.py  test_drift_detector.py  test_functional_flows.py  test_graph.py  test_graph_integration.py  test_library_sync.py  test_loopback.py  test_mytrips.py  test_nudge.py  test_onboarding.py  test_orchestrator.py  test_persistence.py  test_trip_memory.py
